--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,11 @@ version: 1.0.0+1
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 dependencies:
+  path_provider: ^2.0.10
+  sqflite: ^2.0.2+1
+  badges: ^2.0.2
+  provider: ^6.0.3
+  shimmer: ^2.0.0
   http: ^0.13.3
   oauth1: ^2.0.0
   flutter: 
