--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   oauth1: ^2.0.0
   flutter: 
     sdk: flutter
+  flutter_html: ^3.0.0-beta.2
   flutter_localizations: 
     sdk: flutter
   flutter_bloc: ^8.0.0
